fix: avoid overflow caused by image element

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -97,6 +97,7 @@ li {
 
 .polaroid div {
     display: block;
+    overflow: hidden;
     padding: 0 0 75%;
     width: 100%;
 }
